2010-10-16  Robert Larice
 * src/frontend/vectors.h :
    collect vec_get() in "fteext.h"

2010-10-16  Robert Larice
 * src/frontend/com_setscale.c ,
 * src/frontend/plotting/plotting.h :
    collect plot_cur in "fteext.h"

2010-10-16  Robert Larice
 * src/frontend/com_dump.c ,
 * src/frontend/inp.c ,
 * src/frontend/mw_coms.c ,
 * src/frontend/options.c ,
 * src/frontend/runcoms.c ,
 * src/frontend/runcoms2.c ,
 * src/include/fteext.h ,
 * src/main.c :
    collect if_inpdeck() if_run() if_cktfree() if_dump() if_option() in "spiceif.h"

2010-10-16  Robert Larice
 * src/frontend/misccoms.c ,
 * src/frontend/plotting/plotcurv.c ,
 * src/frontend/signal_handler.c ,
 * src/include/fteext.h :
    collect gr_clean() gr_end() gr_point() gr_start() gr_fixgrid() in "graf.h"

2010-10-16  Robert Larice
 * src/frontend/hcomp.c ,
 * src/frontend/misccoms.c ,
 * src/include/fteext.h :
    collect hcomp() in "hcomp.h"

2010-10-16  Robert Larice
 * src/frontend/error.h ,
 * src/frontend/hpgl.c ,
 * src/frontend/plotting/plot5.c ,
 * src/frontend/postsc.c :
    collect internalerror() in "fteext.h"

2010-10-16  Robert Larice
 * src/frontend/com_help.c ,
 * src/include/cpextern.h :
    collect ft_nutmeg() in "fteext.h"

2010-10-16  Robert Larice
 * src/ciderlib/oned/oneadmit.c ,
 * src/ciderlib/oned/onesolve.c :
    remove local prototypes, which are already included

2010-10-16  Robert Larice
 * src/include/ngspice.h :
    remove prototypes, avoid redeclarations

2010-10-16  Holger Vogt
 * examples/control_structs/s-param.cir new example
 * commands.c, postcoms.h, postcoms.c, rawfile.h, rawfile.c
   fteext.h: new command wrs2p, write a s-parameter file
   using Touchstone vers. 1 format.

2010-10-15  Holger Vogt
 * src/ciderlib/input/output.c : #include "../misc/tilde.h"
 * inpcom.c: line 2800ff, allow -.5 token

2010-10-15  Robert Larice
 * src/include/ngspice.h ,
 * src/main.c ,
 * src/maths/misc/accuracy.c ,
 * src/maths/misc/accuracy.h :